--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@muhajirdev/get-env",
+  "name": "get-environment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Muhammad Muhajir <muhammad@muhajir.dev>",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^12.0.2"
