--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "get-environment",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "https://github.com/muhajirdev/get-environment",
   "author": "Muhammad Muhajir <muhammad@muhajir.dev>",
   "license": "ISC",
   "devDependencies": {
