--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "get-environment",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
